--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
    
     <div>
     <p class="two">
-         In December 1928, Bhagat Singh and an associate, Shivaram Rajguru, fatally shot a 21-year-old British police officer, John Saunders, in Lahore, British India, mistaking Saunders, who was still on probation, for the British police superintendent, James Scott, whom they had intended to assassinate. They believed Scott was responsible for the death of popular Indian nationalist leader Lala Lajpat Rai, by having ordered a lathi charge in which Rai was injured, and, two weeks after which, died of a heart attack. Saunders was felled by a single shot from Rajguru, a marksman. He was then shot several times by Singh, the postmortem report showing eight bullet wounds. Another associate of Singh, Chandra Shekhar Azad, shot dead an Indian police constable, Chanan Singh, who attempted to pursue Singh and Rajguru as they fled.
+         In December 1928, Bhagat Singh and an associate, Shivaram Rajguru, fatally shot a 21-year-old British police officer, John Saunders, in Lahore, British India, mistaking Saunders, who was still on probation, for the British police superintendent, James Scott, whom they had intended to assassinate. They believed Scott was responsible for the death of popular Indian nationalist leader Lala Lajpat Rai, by having ordered a lathi charge in which Rai was injured, and, two weeks after which, died of a heart attack. Saunders was felled by a single shot from Rajguru, a marksman. He was then shot several times by Singh, the postmortem report showing eight bullet wounds. Another associate of Singh, Chandra Shekhar Azad, shot dead an Indian police constable, Chanan Singh, who attempted to pursue Singh and Rajguru as they fled.Bhagat Singh is brave boy of India. 
             
     </p>
     </div>
